--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,16 @@
 <!--index.wxml-->
-<view class="container">
-  <map class="indexMap" id="userLocationMap" longitude="{{userLocationMapInfo.longitude}}" latitude="{{userLocationMapInfo.latitude}}" enable-3D="true" enable-overlooking="true" markers="{{markers}}" show-compass="true" enable-overlooking="true" enable-traffic="true" enable-building="true">
+<view class="container" bindtap="viewTap">
+  <map 
+  class="indexMap" 
+  id="userLocationMap" 
+  longitude="{{userLocationMapInfo.longitude}}" 
+  latitude="{{userLocationMapInfo.latitude}}" 
+  enable-3D="true" 
+  enable-overlooking="true" 
+  markers="{{markers}}" 
+  show-compass="true" 
+  enable-overlooking="true" 
+  enable-traffic="true" 
+  enable-building="true">
   </map>
 </view>
