maint:实时上传位置信息开发

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -16,6 +16,7 @@
   enable-overlooking="true" 
   enable-traffic="true" 
   enable-building="true"
-  setting="{{setting}}">
+  setting="{{setting}}"
+  polyline="{{polyline}}">
   </map>
 </view>
