--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,20 +1,27 @@
 <!--index.wxml-->
-<view class="container" bindtap="bindTap">
+<view class="container" bindtap="userTap">
   <map class="indexMap" id="userLocationMap" longitude="{{user.longitude}}" latitude="{{user.latitude}}" enable-3D="true" markers="{{markers}}" show-location='true' scale="20" min-scale='1' max-scale='100' enable-traffic='true' enable-building='true' setting="{{user.mapSetting}}" polyline='{{user.mapPolyline}}' enable-overlooking='true' skew='17'>
     <cover-view slot="callout" wx:for="{{customCalloutArray}}" wx:key="customCallout">
       <cover-view marker-id="{{customCallout.id}}"></cover-view>
     </cover-view>
   </map>
-  <view data-weui-theme="{{theme}}">
+  <view data-weui-theme="{{theme}}" hidden="{{flags.hiddenUinfoView}}">
     <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
       <image class="avatar" src="{{avatarUrl}}"></image>
     </button>
-    <mp-form>
+    <mp-form models="{{userinfoForm}}">
       <mp-cells>
         <mp-cell title="昵称">
-          <input type="nickname" class="weui-input" placeholder="请输入昵称" />
+          <input bindinput="userinfoFormInputChange" type="nickname" value="{{userinfoForm.nickname}}" data-field="nickname" class="weui-input" placeholder="请输入昵称" />
         </mp-cell>
       </mp-cells>
+      <view class="submit_btn_wrap">
+        <button class="userinfo-up" type="primary" form-type="submit" plain="true" bindtap="upUserinfo">
+          提交
+        </button>
+      </view>
+
     </mp-form>
+
   </view>
 </view>
