--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -20,6 +20,12 @@
   height: 56px;
 }
 
+.userinfo-up {
+  border-radius: 8px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
 .container {
   display: flex;
 }
